# messier-neural-network

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.hpp  enums.hpp  model.hpp  typedefs.hpp
include/activation/: leakyrelu.hpp  relu.hpp  sigmoid.hpp  softmax.hpp  softplus.hpp  softsign.hpp  swish.hpp  tanh.hpp
include/layer/: dense.hpp  input.hpp  layer.hpp
include/loss/: cross_entropy.hpp  kldivergence.hpp  mean_absolute_error.hpp  quadratic.hpp
include/optimizer/: SGD.hpp  adam.hpp  optimizer.hpp  sgd.hpp
include/weights/: he.hpp  normal.hpp  xavier.hpp
lib/Eigen/: Core
lib/Eigen/src/Core/: CommaInitializer.h  ConditionEstimator.h  CoreEvaluators.h  DenseCoeffsBase.h  StableNorm.h  Transpose.h
lib/Eigen/src/Core/functors/: BinaryFunctors.h
lib/Eigen/src/Core/products/: SelfadjointMatrixVector.h  TriangularSolverMatrix.h
lib/Eigen/src/Core/util/: Constants.h  Macros.h  XprHelper.h
lib/Eigen/src/Eigenvalues/: ComplexEigenSolver.h  ComplexSchur.h  EigenSolver.h  GeneralizedEigenSolver.h  HessenbergDecomposition.h  RealSchur.h  SelfAdjointEigenSolver.h  Tridiagonalization.h
lib/Eigen/src/Geometry/: Quaternion.h
lib/Eigen/src/LU/: FullPivLU.h
lib/Eigen/src/SVD/: BDCSVD.h  JacobiSVD.h
src/: model.ipp
src/activation/: leakyrelu.cpp  relu.cpp  sigmoid.cpp  softmax.cpp  softplus.cpp  softsign.cpp  swish.cpp  tanh.cpp
src/layer/: dense.ipp  input.ipp
src/loss/: cross_entropy.cpp  kldivergence.cpp  mean_absolute_error.cpp  quadratic.cpp
src/optimizer/: SGD.cpp  adam.cpp  optimizer.cpp  sgd.cpp
src/weights/: he.cpp  normal.cpp  xavier.cpp
test/: add_numbers.cpp  learn_xor.cpp
